Embedding swagger generation files
